force-app/main/default/objects/Assessment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field to store employee details for assessment.</description>
    <inlineHelpText>Field to store employee details for assessment.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>