force-app/main/default/objects/Assessment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Field to store notes about the assessment.</description>
    <inlineHelpText>Field to store notes about the assessment.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>