force-app/main/default/objects/Assessment__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Field to store employee&apos;s rating for the assessment.</description>
    <inlineHelpText>Field to store employee&apos;s rating for the assessment.</inlineHelpText>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>